fixed overflowing of hero image on mobile phones

--- a/main.css
+++ b/main.css
@@ -246,7 +246,7 @@ a {
   }
 
   .hero-image {
-    max-width: 25rem;
+    max-width: 20rem;
   }
 
   .sections-wrapper {
